--- a/Tema14/Actividades/holaMundoRouteNoSSR/src/app/contacto/contacto.component.html
+++ b/Tema14/Actividades/holaMundoRouteNoSSR/src/app/contacto/contacto.component.html
@@ -1,39 +1,49 @@
-<h2>Formulario de Contacto</h2>
-
-<form class="contact-form">
-    <div class="form-group">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required>
-    </div>
-
-    <div class="form-group">
-        <label for="apellidos">Apellidos:</label>
-        <input type="text" id="apellidos" name="apellidos" required>
-    </div>
-
-    <div class="form-group">
-        <label for="empresa">Empresa:</label>
-        <input type="text" id="empresa" name="empresa">
-    </div>
-
-    <div class="form-group">
-        <label for="direccion">Dirección:</label>
-        <input type="text" id="direccion" name="direccion" required>
-    </div>
-
-    <div class="form-group">
-        <label for="ciudad">Ciudad:</label>
-        <input type="text" id="ciudad" name="ciudad" required>
-    </div>
-
-    <div class="form-group">
-        <label for="codigo-postal">Código Postal:</label>
-        <input type="text" id="codigo-postal" name="codigo-postal" required>
-    </div>
-
-    <button type="submit" class="submit-btn">Enviar</button>
-</form>
-<footer class="footer">
-    <p>&copy; 2025 Tienda Informática | Todos los derechos reservados.</p>
-    <p>David López Núñez</p>
-</footer>
+<mat-card>
+    <mat-card-title>Formulario de Contacto</mat-card-title>
+    <br>
+    <br>
+    <mat-card-content>
+      <form>
+        <mat-form-field appearance="outline">
+          <mat-label>Nombre</mat-label>
+          <input matInput type="text" required>
+        </mat-form-field>
+  
+        <mat-form-field appearance="outline">
+          <mat-label>Apellidos</mat-label>
+          <input matInput type="text" required>
+        </mat-form-field>
+  
+        <mat-form-field appearance="outline">
+          <mat-label>Empresa</mat-label>
+          <input matInput type="text">
+        </mat-form-field>
+  
+        <mat-form-field appearance="outline">
+          <mat-label>Dirección</mat-label>
+          <input matInput type="text" required>
+        </mat-form-field>
+  
+        <mat-form-field appearance="outline">
+          <mat-label>Ciudad</mat-label>
+          <input matInput type="text" required>
+        </mat-form-field>
+  
+        <mat-form-field appearance="outline">
+          <mat-label>Código Postal</mat-label>
+          <input matInput type="text" required>
+        </mat-form-field>
+  
+        <br>
+        <br>
+        <button mat-raised-button color="primary">Enviar</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
+  <footer class="footer">
+    <mat-toolbar color="accent">
+      <span>&copy; 2025 Tienda Informática | Todos los derechos reservados.</span>
+      <span class="spacer"></span>
+      <span>David López Núñez</span>
+    </mat-toolbar>
+  </footer>  
